--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
-    "@tensorflow/tfjs": "^4.21.0",
+    "@tensorflow/tfjs": "^4.22.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vladmandic/face-api": "^1.7.14",
     "axios": "^1.7.7",
     "face-api.js": "^0.22.2",
     "react": "^18.3.1",
